# gns-api-gateway

./: Dockerfile  README.md  pyproject.toml
gns_api_gateway/: __init__.py  __main__.py  constants.py  containers.py  entrypoint.py  settings.py
gns_api_gateway/api/: __init__.py  auth.py  error_handlers.py
gns_api_gateway/api/routers/: abstract_router.py  gns3.py
gns_api_gateway/api/serializers/: __init__.py  error.py
gns_api_gateway/api/utilites/: __init__.py  parsed_request.py  response_builder.py
gns_api_gateway/application/: __init__.py  gns3.py
gns_api_gateway/async_rest_client/: __init__.py  abstract_rest_client.py  auth_providers.py  client_utils.py  constants.py  exceptions.py  interfaces.py  response.py
gns_api_gateway/datasource/: __init__.py  backoff.py  datasource.py
gns_api_gateway/domain/exceptions/: __init__.py  auth.py  base.py  proxies.py
gns_api_gateway/domain/models/: __init__.py  role.py  user.py
gns_api_gateway/infrastructure/: __init__.py
gns_api_gateway/infrastructure/access_management/: __init__.py  context_vars.py
gns_api_gateway/infrastructure/proxies/: __init__.py  generic_rest_client.py  gns3.py
gns_api_gateway/infrastructure/repositories/: __init__.py  token.py  user.py
gns_api_gateway/infrastructure/tables/: __init__.py  token.py  user.py
