[tool.poetry]
name = "gns_api_gateway"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.9.7"
pydantic = "^1.8.1"
click = "^8.1.3"
dependency-injector = "~4.36.0"
fastapi = "^0.74.0"
uvicorn = "^0.18.3"
sentry-sdk = "^1.1.0"
cachetools = "^5.3.0"
python-multipart = "^0.0.6"
more-itertools = "^9.1.0"
aiohttp = "^3.8.3"
aiohttp-retry = "^2.8.3"
ipdb = "^0.13.11"
